# my-portfolio-notebooks

./: AAPL.ipynb  AMD.ipynb  AMZN.ipynb  ARM.ipynb  ASML.ipynb  AVGO-Broadcom.ipynb  BTC-EUR.ipynb  BTC-USD.ipynb  COHR.ipynb  COIN.ipynb  CRWD.ipynb  CRWV.ipynb  ETH-EUR.ipynb  ETH-USD.ipynb  GOOG.ipynb  INTC.ipynb  LICENSE  MSFT.ipynb  Maintenance.ipynb  NBIS.ipynb  NVDA.ipynb  NVTS.ipynb  ORCL.ipynb  PLTR.ipynb  QCOM.ipynb  RACE-Ferrari.ipynb  RACE.MI.ipynb  README.md  SMCI.ipynb  TSLA.ipynb  TSM.ipynb  TXN.ipynb  XAU-USD.ipynb  XRP-EUR.ipynb  XRP-USD.ipynb  ZGLD.SW.ipynb  opportunities.ipynb  opportunities.py  pyproject.toml  runall.sh  (+1 more)
data/: import.sql  isin_to_suffix.csv  transactions-from-01011990-to-20092025.csv  transactions-from-22092025-to-22092025.csv  transactions-from-23092025-to-23092025.csv  transactions-from-24092025-to-24092025.csv
my_portfolio/: __init__.py  _currency.py  _import_trades.py  _numerics.py  _opportunities.py  _workflow.py
transactions/: AAPL.in.csv  AAPL.out..csv  AAPL.out.csv  AMD.in.csv  AMD.out..csv  AMD.out.csv  CRWV.in.csv  CRWV.out..csv  CRWV.out.csv  ETH.in.csv  ETH.out..csv  ETH.out.csv  NVDA.csv  NVDA.out..csv  NVDA.out.csv  PLTR.in.csv  PLTR.out..csv  PLTR.out.csv  TSLA.csv  TSLA.out..csv  TSLA.out.csv  import.py  transactions-from-01011990-to-20092025.csv
